--- a/src/libANGLE/renderer/metal/BUILD.gn
+++ b/src/libANGLE/renderer/metal/BUILD.gn
@@ -58,6 +58,8 @@ _metal_backend_sources = [
   "mtl_format_utils.mm",
   "mtl_glslang_utils.h",
   "mtl_glslang_utils.mm",
+  "mtl_msl_vertex_fetch_codegen.h",
+  "mtl_msl_vertex_fetch_codegen.mm",
   "mtl_occlusion_query_pool.h",
   "mtl_occlusion_query_pool.mm",
   "mtl_render_utils.h",
