Modify compiler.gni add ReplaceForShaderFramebufferFetch and RunAtTheBeginningOfShader

--- a/src/compiler.gni
+++ b/src/compiler.gni
@@ -158,6 +158,8 @@ angle_translator_sources = [
   "src/compiler/translator/tree_ops/RemovePow.h",
   "src/compiler/translator/tree_ops/RemoveUnreferencedVariables.cpp",
   "src/compiler/translator/tree_ops/RemoveUnreferencedVariables.h",
+  "src/compiler/translator/tree_ops/ReplaceForShaderFramebufferFetch.cpp",
+  "src/compiler/translator/tree_ops/ReplaceForShaderFramebufferFetch.h",
   "src/compiler/translator/tree_ops/RewriteAtomicCounters.cpp",
   "src/compiler/translator/tree_ops/RewriteAtomicCounters.h",
   "src/compiler/translator/tree_ops/RewriteAtomicFunctionExpressions.cpp",
@@ -219,6 +221,8 @@ angle_translator_sources = [
   "src/compiler/translator/tree_util/ReplaceClipDistanceVariable.h",
   "src/compiler/translator/tree_util/ReplaceShadowingVariables.cpp",
   "src/compiler/translator/tree_util/ReplaceShadowingVariables.h",
+  "src/compiler/translator/tree_util/RunAtTheBeginningOfShader.cpp",
+  "src/compiler/translator/tree_util/RunAtTheBeginningOfShader.h",
   "src/compiler/translator/tree_util/RunAtTheEndOfShader.cpp",
   "src/compiler/translator/tree_util/RunAtTheEndOfShader.h",
   "src/compiler/translator/tree_util/Visit.h",
